@@ -15,8 +15,6 @@ struct tiny
   char g;
 };
 
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && \
-  (!defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) || defined(__SDCC_STACK_AUTO)) // Todo: enable when struct parmeters are supported!
 f (int n, ...)
 {
   struct tiny x;
@@ -45,12 +43,10 @@ f (int n, ...)
   }
   va_end (ap);
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if 0 // Todo: enable when struct parmeters are supported!
   struct tiny x[3];
   x[0].c = 10;
   x[1].c = 11;
@@ -67,7 +63,14 @@ testTortureExecute (void)
   x[0].g = 50;
   x[1].g = 51;
   x[2].g = 52;
+#if !defined(__SDCC_stm8) // Bug (assertion fails in code generation)
+#if !defined(__SDCC_z80) && !defined(__SDCC_z180) && !defined(__SDCC_sm83) && !defined(__SDCC_ez80_z80) && !defined(__SDCC_r2k) && !defined(__SDCC_r2ka) && !defined(__SDCC_r3ka) && !defined(__SDCC_tlcs90) && !defined(__SDCC_z80n)// Bug (test fails)
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // TODO: Enable when pdk supports struct argument of odd size!
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Bug (fails test)
   f (3, x[0], x[1], x[2], (long) 123);
-  return;
 #endif
+#endif
+#endif
+#endif
+  return;
 }
